--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-catch-links": "^2.2.1",
+    "gatsby-plugin-emotion": "^4.2.2",
     "gatsby-plugin-feed": "^2.4.1",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-lodash": "^3.2.1",
@@ -17,6 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-sitemap": "^2.3.1",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-twitter": "^2.2.1",
     "gatsby-remark-autolink-headers": "^2.2.1",
     "gatsby-remark-copy-linked-files": "^2.2.1",
@@ -25,6 +29,7 @@
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-remark-responsive-iframe": "^2.3.1",
     "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-theme-elements": "^1.0.7",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.3",
     "lodash": "^4.17.15",
@@ -37,6 +42,7 @@
     "react-helmet": "^5.2.1",
     "react-share": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
+    "theme-ui": "^0.3.1",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
