--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^10.0.27",
     "@theme-ui/presets": "^0.3.0",
     "gatsby": "^2.20.12",
+    "gatsby-cli": "^2.11.12",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-emotion": "^4.2.2",
@@ -33,6 +34,7 @@
     "gatsby-theme-elements": "^1.0.7",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.3",
+    "global": "^4.4.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.12.3",
