--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-remark-responsive-iframe": "^2.3.1",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-theme-elements": "^1.0.7",
+    "gatsby-theme-style-guide": "^0.3.1",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.4.3",
     "global": "^4.4.0",
