--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@theme-ui/presets": "^0.3.0",
     "gatsby": "^2.20.12",
-    "gatsby-cli": "^2.11.12",
+    "gatsby-cli": "^2.11.13",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-emotion": "^4.2.2",
