--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/styled": "^10.0.27",
     "@theme-ui/presets": "^0.3.0",
     "gatsby": "^2.20.12",
-    "gatsby-cli": "^2.11.13",
+    "gatsby-cli": "^2.11.15",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-emotion": "^4.2.2",
@@ -20,6 +20,7 @@
     "gatsby-plugin-netlify-cms": "^4.2.2",
     "gatsby-plugin-nprogress": "^2.2.1",
     "gatsby-plugin-offline": "^3.1.2",
+    "gatsby-plugin-postcss": "^2.2.3",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-sitemap": "^2.3.1",
@@ -47,6 +48,7 @@
     "react-helmet": "^5.2.1",
     "react-share": "^4.1.0",
     "react-twitter-widgets": "^1.7.1",
+    "tailwindcss": "^1.3.4",
     "theme-ui": "^0.3.1",
     "url-join": "^4.0.0"
   },
