--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@emotion/styled": "^10.0.27",
     "@theme-ui/presets": "^0.3.0",
     "gatsby": "^2.20.12",
-    "gatsby-cli": "^2.11.15",
+    "gatsby-cli": "^2.12.0",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-emotion": "^4.2.2",
@@ -22,6 +22,7 @@
     "gatsby-plugin-nprogress": "^2.2.1",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-postcss": "^2.2.3",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-sitemap": "^2.3.1",
@@ -48,6 +49,7 @@
     "react-feather": "^2.0.4",
     "react-helmet": "^5.2.1",
     "react-share": "^4.1.0",
+    "react-tabs": "^3.1.0",
     "react-twitter-widgets": "^1.7.1",
     "theme-ui": "^0.3.1",
     "url-join": "^4.0.0"
