--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@theme-ui/presets": "^0.3.0",
+    "@theme-ui/prism": "^0.3.0",
+    "@theme-ui/style-guide": "^0.3.0",
     "gatsby": "^2.20.12",
     "gatsby-cli": "^2.12.0",
     "gatsby-image": "^2.3.1",
