--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@theme-ui/presets": "^0.3.0",
     "@theme-ui/prism": "^0.3.0",
     "@theme-ui/style-guide": "^0.3.0",
+    "aos": "^2.3.4",
     "gatsby": "^2.20.12",
     "gatsby-cli": "^2.12.0",
     "gatsby-image": "^2.3.1",
